intro aangepast beetje

--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -28,9 +28,11 @@ Old High German only has proper attraction. Modern German only has inverse attra
     \subsection{Gothic}
     \subsection{Old High German}
 
+
+
 \ex. \tsc{ext:gen}, \tsc{int:nom}
 \ag. suachit thes nan sentit\\
- search.\tsc{3.sg}\scsub{dat} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
+ search.\tsc{3.sg}\scsub{gen} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
  `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
 \bg. diu habe niemer niht entuot, des der seele schaden si\\
  they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{nom}\\
@@ -103,10 +105,10 @@ So, to sum up:
         \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
           \toprule
             \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	 & V\scsub{nom} 		& V\scsub{acc} 											                                & V\scsub{dat} 											                                  & V\scsub{gen} 											                  \\ \cmidrule(lr){1-5}
-            V\scsub{nom} 		                                 & \colorbox{Gray}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} 	                & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
-            V\scsub{acc} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{Gray}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} 	                &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
-            V\scsub{dat} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{gray}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{Gray}{\tsc{dat}} 			                                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
-            V\scsub{gen} 		                                 & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{gray}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{Gray}{\tsc{gen}}				                  \\
+            V\scsub{nom} 		                                 & \colorbox{LightGray}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} 	                & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
+            V\scsub{acc} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LightGray}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} 	                &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
+            V\scsub{dat} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LightGray}{\tsc{dat}} 			                                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
+            V\scsub{gen} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LightGray}{\tsc{gen}}				                  \\
           \bottomrule
         \end{tabularx}
       \end{minipage}
