--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -20,7 +20,8 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \usepackage{tabularx,booktabs}%pretty tables
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
 \usepackage{color, colortbl}
-\definecolor{Gray}{gray}{0.9}
+\definecolor{LightGray}{gray}{0.8}
+\definecolor{DarkGray}{gray}{0.5}
 \usepackage{multirow}
 
 %%%examples%%%
