--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@
 The topic of this thesis is case attraction in headless relative clauses. First I talk about the role of case in language. Second I discuss regular headed relative clauses and how they handle case. Third I introduce a phenomenon called case attraction in headed relative clause. Finally, I get to headless relative clauses that show case attraction.
 
 
-\section{Explaining the basics/title}
+\section{Explaining the title}
 
 
 \subsection{Case attraction}
@@ -52,13 +52,17 @@ he replied\scsub{dat} who.\tsc{dat} {to him} spoke\scsub{nom}\\
 
 
 
-\section{Case complexity}
+\section{Three topics}
+
+Here comes the introduction to a part that discusses three problems. These problems are what I will discuss in my dissertation. What will be here is connecting these problems to the real world. Why do we care about these? What are these problems going to inform us about?
+
+\subsection{Case complexity}
 
 case attraction always follows the hierarchy
 
 
 
-\section{Direction of attraction}
+\subsection{Direction of attraction}
 
 case attraction can go two ways
 
@@ -74,6 +78,6 @@ the morphology of the relative pronouns decides which one is possible
 
 
 
-\section{Prepositions}
+\subsection{Prepositions}
 
 and r-pronouns
