beetje tabel etc aangepast
schiet niet echt op

--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -32,37 +32,41 @@ Old High German only has proper attraction. Modern German only has inverse attra
 
 \ex. \tsc{ext:gen}, \tsc{int:nom}
 \ag. suachit thes nan sentit\\
- search.\tsc{3.sg}\scsub{gen} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
+ search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
  `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
 \bg. diu habe niemer niht entuot, des der seele schaden si\\
- they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{nom}\\
+ they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
  `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:dat}, \tsc{int:nom}
 \ag. Aer antuurta demo zaimo sprah.\\
-he replied\scsub{dat} D-\tsc{m.sg.dat} {to him} spoke\scsub{nom}\\
+he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 `He replied to the one who spoke to him.' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
 \bg. gebe themo ni eigi\\
- give\scsub{dat} D--\tsc{m.sg.dat} not posses\scsub{nom}\\
+ give\scsub{[dat]} D--\tsc{m.sg.dat} not posses\scsub{[nom]}\\
  `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
 
 \ex. \tsc{ext:acc}, \tsc{int:nom}
-
+\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
+  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
+  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:gen}, \tsc{int:acc}
 \ag. der bewiset in des er suochte\\
- he directed\scsub{gen} him D-\tsc{n.sg.gen} he sought\scsub{acc}\\
+ he directed\scsub{[gen]} him D-\tsc{n.sg.gen} he sought\scsub{[acc]}\\
  `He directed him to what he sought.' \hfill (Middle High German, Iwein 988, \citealt[761]{behaghel1923}), trans. Hartmann von Aue-Portal
 \bg. giwisso ni birut ir thero ih irwellu zi mir\\
- bestimmt not belong\scsub{gen} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{acc} to me\\
+ bestimmt not belong\scsub{[gen]} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{[acc]} to me\\
  `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III,22,20, Schrodt,p.175)
 
 \ex. \tsc{ext:dat}, \tsc{int:acc}
 \ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
- {are you} {bigger than}\scsub{dat} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{acc}\\
+ {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
  `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:gen}, \tsc{int:dat}
+
+
 
 
 
@@ -89,9 +93,6 @@ Don't know:
 \bg. tannoh pito ih tes noh fore ist (id quod)\\
  \\
  `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
-\bg. ih bibringu fona Juda dhen mina berga chisetzit\\
-  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
-  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
 
 So, to sum up:
 
@@ -104,11 +105,11 @@ So, to sum up:
       \begin{minipage}{\linewidth}
         \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
           \toprule
-            \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	 & V\scsub{nom} 		& V\scsub{acc} 											                                & V\scsub{dat} 											                                  & V\scsub{gen} 											                  \\ \cmidrule(lr){1-5}
-            V\scsub{nom} 		                                 & \colorbox{LightGray}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	              & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} 	                & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
-            V\scsub{acc} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LightGray}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} 	                &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
-            V\scsub{dat} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LightGray}{\tsc{dat}} 			                                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
-            V\scsub{gen} 		                                 & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DarkGray}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LightGray}{\tsc{gen}}				                  \\
+            \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                & \tsc{[gen]} 											                  \\ \cmidrule(lr){1-5}
+            \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	            & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
+            \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
+            \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
+            \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LG}{\tsc{gen}}				                  \\
           \bottomrule
         \end{tabularx}
       \end{minipage}
@@ -137,20 +138,20 @@ Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-
 	\begin{minipage}{\linewidth}
 		\begin{tabularx}{\textwidth}{c *{6}{Y}}
 		\toprule
-		\tsc{sg}	& \tsc{m}         & \tsc{n}              &\tsc{f}                \\
+		\tsc{sg}	& \tsc{m}     & \tsc{n}     &\tsc{f}           \\
 		\midrule
-		\tsc{nom} & dëse, dësēr			& diz							     &	dësiu, disiu (thisu) \\
-		\tsc{acc}	& dësan						&	diz		        	     &	dësa								 \\
-		\tsc{dat}	&	dësemu, dësemo	&	dësemu, dësemo	     & dëseru							   \\
-    \tsc{gen} & dësses          & dësses               & dësera                \\
+		\tsc{nom} & dër       	& daȥ					& diu              \\
+		\tsc{acc}	& dën					&	daȥ		      & dea, dia (die)	 \\
+		\tsc{dat}	&	dëmu, dëmo	&	dëmu, dëmo	& dëru, dëro			 \\
+    \tsc{gen} & dës         & dës         & dëra, dëru, dëro \\
 		\bottomrule
     \toprule
-    \tsc{pl}	& \tsc{m}         & \tsc{n}              &\tsc{f}                \\
+    \tsc{pl}	& \tsc{m}            & \tsc{n}      & \tsc{f}   \\
     \midrule
-    \tsc{nom} &  dëse           & dësiu, disiu (thisu) & dëso                  \\
-    \tsc{acc} &  dëse           & dësiu, disiu (thisu) & dëso                  \\
-    \tsc{dat} &  dësēm, dësen   & dësēm, dësen         & dësēm, dësen          \\
-    \tsc{gen} &  dësero         & dësero               & dësero                \\
+    \tsc{nom} &  dē, dea, dia, die & diu, dei     & deo, dio  \\
+    \tsc{acc} &  dē, dea, dia, die & diu, dei     & deo, dio  \\
+    \tsc{dat} &  dēm, dēn          & dēm, dēn     & dēm, dēn  \\
+    \tsc{gen} &  dëro              & dëro         & dëro      \\
     \bottomrule
 		\end{tabularx}
 	\end{minipage}
