worked out examples/paradigms
added german, bit of gothic, added overview tables

--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -3,7 +3,7 @@
 \chapter{Direction of attraction}
 
 
-  \section{Typology}
+  \section{The typology}
 Old High German only has proper attraction. Modern German only has inverse attraction. Gothic has both proper and inverse attraction.
 
 
@@ -26,17 +26,72 @@ Old High German only has proper attraction. Modern German only has inverse attra
 
 
     \subsection{Gothic}
+
+
+
+
+\ex. \tsc{ext:nom}, \tsc{int:acc}
+\ag. þ-an-ei frijos siuks ist\\
+ D-\tsc{m.sg.acc}-\tsc{comp} sick is\\
+ `(The one) whom you love is sick'
+
+\ex. \tsc{ext:nom}, \tsc{int:dat}
+\ex. \tsc{ext:nom}, \tsc{int:gen}
+
+\ex. \tsc{ext:acc}, \tsc{int:nom}
+\ag. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
+ and D-\tsc{f.sg.acc}-\tsc{comp} is from Laodicea you read\\
+ `And read the one (which) is from Laodicea'
+
+\ex. \tsc{ext:acc}, \tsc{int:dat}
+\ex. \tsc{ext:acc}, \tsc{int:gen}
+
+\ex. \tsc{ext:dat}, \tsc{int:nom}
+\ag. þ-aim-ei iupa sind fraþjaiþ\\
+ D-\tsc{pl.dat}-\tsc{comp} above are {think on}\\
+ `Set your mind on (those) which are above'
+
+\ex. \tsc{ext:dat}, \tsc{int:acc}
+\ag. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
+what now you-want that I-do D-\tsc{m.sg.dat}-\tsc{comp} you-say king of-Jews\\
+`What do you want that I do to him (whom) you call the [king of] Jews?'
+
+\ex. \tsc{ext:dat}, \tsc{int:gen}
+
+\ex. \tsc{ext:gen}, \tsc{int:nom}
+\a. not attested
+
+\ex. \tsc{ext:gen}, \tsc{int:acc}
+\ag. ni waiht þ-iz-ei gasehvun\\
+ not any D-\tsc{n.sg.gen}-\tsc{comp} they-saw\\
+ `not any of that (which) they saw'
+
+
+\ex. \tsc{ext:gen}, \tsc{int:dat}
+
+    \begin{table}[h]
+      \center
+      \caption {Case attraction in headless relatives in Gothic}
+        \begin{minipage}{\linewidth}
+          \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+            \toprule
+              \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
+              \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
+              \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
+              \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
+              \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
+            \bottomrule
+          \end{tabularx}
+        \end{minipage}
+    \end{table}
+
     \subsection{Old High German}
 
 
-
-\ex. \tsc{ext:gen}, \tsc{int:nom}
-\ag. suachit thes nan sentit\\
- search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
- `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
-\bg. diu habe niemer niht entuot, des der seele schaden si\\
- they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
- `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
+\ex. \tsc{ext:acc}, \tsc{int:nom}
+\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
+  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
+  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:dat}, \tsc{int:nom}
 \ag. Aer antuurta demo zaimo sprah.\\
@@ -46,10 +101,18 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  give\scsub{[dat]} D--\tsc{m.sg.dat} not posses\scsub{[nom]}\\
  `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
 
-\ex. \tsc{ext:acc}, \tsc{int:nom}
-\ag. ih bibringu fona Juda dhen mina berga chisetzit\\
-  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
-  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+ \ex. \tsc{ext:dat}, \tsc{int:acc}
+ \ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
+  {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
+  `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
+
+\ex. \tsc{ext:gen}, \tsc{int:nom}
+\ag. suachit thes nan sentit\\
+ search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
+ `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
+\bg. diu habe niemer niht entuot, des der seele schaden si\\
+ they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
+ `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:gen}, \tsc{int:acc}
 \ag. der bewiset in des er suochte\\
@@ -59,44 +122,33 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  bestimmt not belong\scsub{[gen]} \tsc{2.pl.nom} D-\tsc{gen.pl} I choose\scsub{[acc]} to me\\
  `you surely do not belong to those that I choose for myself //sicherlich gehört ihr nicht zu denen die ich mir erwähle' \hfill (Old High German, Otfrid III,22,20, Schrodt,p.175)
 
-\ex. \tsc{ext:dat}, \tsc{int:acc}
-\ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
- {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
- `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
-
 \ex. \tsc{ext:gen}, \tsc{int:dat}
 
 
 
-
-
-
-
-Don't know:
-
-\ex. Old High German
-\ag. gaat uz diu halt za dem iz forchaufent\\
- \\
- `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
-\bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
- \\
- `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
-\bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
- \\
- `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
-\bg. thia laz ih themo iz lisit thar\\
- \\
- `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
-\bg. noh so neduohti in gnuoge des si habetin\\
- \\
- `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
-\bg. tannoh pito ih tes noh fore ist (id quod)\\
- \\
- `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
-
-So, to sum up:
-
-
+% Don't know:
+%
+% \ex. Old High German
+% \ag. gaat uz diu halt za dem iz forchaufent\\
+%  \\
+%  `' \hfill (Old High German, Monsee Fragments 20,14, \citealt[761]{behaghel1923})
+% \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+%  \\
+%  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \hfill (Old High German, Tatian 118,1, \citealt[761]{behaghel1923})
+% \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+%  \\
+%  `' \hfill (Old High German, Otfrid II,8,24, \citealt[761]{behaghel1923})
+% \bg. thia laz ih themo iz lisit thar\\
+%  \\
+%  `' \hfill (Old High German, Otfrid I,19,25, \citealt[761]{behaghel1923})
+% \bg. noh so neduohti in gnuoge des si habetin\\
+%  \\
+%  `' \hfill (Old High German, Notker I,63,29, \citealt[761]{behaghel1923})
+% \bg. tannoh pito ih tes noh fore ist (id quod)\\
+%  \\
+%  `' \hfill (Old High German, Notker 193,19, \citealt[761]{behaghel1923})
+%
+% So, to sum up:
 
 
   \begin{table}[h]
@@ -122,6 +174,124 @@ So, to sum up:
 
     \subsection{Modern German}
 
+\subsubsection{Grammatical examples}
+
+\ex. \tsc{ext:nom}, \tsc{int:acc}
+\ag. Uns besucht wen Maria mag.\\
+ Us visits\scsub{[nom]} W-\tsc{m/f.sg.acc} Maria likes\scsub{acc}\\
+ `Who visits us likes Maria likes.' \hfill \citep[344]{vogel2001}
+\bg. *Uns besucht wer Maria mag.\\
+ Us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria likes\scsub{acc}\\
+ `Who visits us likes Maria likes.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:nom}, \tsc{int:dat}
+\ag. Uns besucht wem Maria vertraut.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{dat}\\
+ `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
+\bg. *Uns besucht wer Maria vertraut.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{dat}\\
+ `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
+
+\ex. \tsc{ext:nom}, \tsc{int:gen}
+\ag. Uns besucht wessen Maria sich erfreuen würde.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.gen} Maria self {be happy}\scsub{[gen]} would\\
+ `Who visits us, Maria would be happy about' \hfill \citep[344]{vogel2001}
+\bg. *Uns besucht wer Maria sich erfreuen würde.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria self {be happy}\scsub{[gen]} would\\
+ `Who visits us, Maria would be happy about' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:acc}, \tsc{int:dat}
+\ag. Ich {lade ein} wem auch Maria vertraut. \\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.dat} also Maria trusts\scsub{dat}.\\
+ `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
+\bg. *Ich {lade ein} wen auch Maria vertraut. \\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} also Maria trusts\scsub{dat}.\\
+ `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:acc}, \tsc{int:gen}
+\ag. Ich {lade ein}, wessen sich auch Maria erfreuen würde.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.gen} self also Maria {be happy}\scsub{[gen]} would.\\
+ `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
+\bg. *Ich {lade ein}, wen sich auch Maria erfreuen würde.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} self also Maria {be happy}\scsub{[gen]} would.\\
+ `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:dat}, \tsc{int:gen}
+\ag. ?Bodo entledigt sich, wem immer Gerhard misstraut.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.dat} ever Gerhard mistrusts\scsub{dat}\\
+ `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
+\bg. ?Bodo entledigt sich, wessen immer Gerhard misstraut.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.gen} ever Gerhard mistrusts\scsub{dat}\\
+ `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
+
+
+\subsubsection{Ungrammatical examples}
+
+\ex. \tsc{ext:acc}, \tsc{int:nom}
+\ag. *Ich {lade ein}, wen mir sympathisch ist.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} me nice is\scsub{nom}\\
+ `I invite who I like.' \hfill \citep[344]{vogel2001}
+\bg. *Ich {lade ein}, wer mir sympathisch ist.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.nom} me nice is\scsub{nom}\\
+ `I invite who I like.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:dat}, \tsc{int:nom}
+\ag. *Ich vertraue, wem Hitchcock mag.\\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} Hitchcock likes\scsub{nom}\\
+ `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
+\bg. *Ich vertraue, wer Hitchcock mag.\\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.nom} Hitchcock likes\scsub{nom}\\
+ `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
+
+\ex. \tsc{ext:dat}, \tsc{int:acc}
+\ag. *Ich vertraue wem auch Maria mag. \\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} also Maria likes\scsub{acc}.\\
+ `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
+\bg. *Ich vertraue wen auch Maria mag. \\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.acc} also Maria likes\scsub{acc}.\\
+ `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
+
+\ex. \tsc{ext:gen}, \tsc{int:nom}
+\ag. *Bodo entledigt sich, wessen immer andere Ansichten hat als er.\\
+ Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever other opinions has\scsub{[nom]} than he\\
+ `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
+\bg. *Bodo entledigt sich, wer immer andere Ansichten hat als er.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.nom} ever other opinions has\scsub{[nom]} than he\\
+ `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
+
+\ex. \tsc{ext:gen}, \tsc{int:acc}
+\ag. *Bodo entledigt sich, wessen immer Henkel nicht mag.\\
+ Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever Henkel not likes\scsub{acc}\\
+ `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
+\bg. *Bodo entledigt sich, wen immer Henkel nicht mag.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.acc} ever Henkel not likes\scsub{acc}\\
+ `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{ext:gen}, \tsc{int:dat}
+\ag. *Maria hilft, wem andere sich entledigen möchten.\\
+ Maria helps\scsub{[dat]} W-\tsc{m/f.sg.dat} others self rid\scsub{[gen]} want\\
+ `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
+\bg. *Maria hilft, wessen andere sich entledigen möchten.\\
+ Maria helps\scsub{[dat]} W-\tsc{m/f.sg.gen} others self rid\scsub{[gen]} want\\
+ `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
+
+\subsubsection{Summary of the data}
+
+    \begin{table}[h]
+      \center
+      \caption {Case attraction in headless relatives in Modern German}
+        \begin{minipage}{\linewidth}
+          \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+            \toprule
+              \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
+              \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
+              \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
+              \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
+              \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{acc}} & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
+            \bottomrule
+          \end{tabularx}
+        \end{minipage}
+    \end{table}
 
 
   \section{Background: relative clause theory}
@@ -132,33 +302,80 @@ Standard raising, probably Cinque's double-headed structures
 Old High German has a d-pronoun. Modern German has a wh-pronoun. Gothic has a d-pronoun plus a caseless relativizer.
 
 
-\begin{table}[h]\label{tbl:intextgoth}
+\subsection{Old High German}
+
+\begin{table}[h]\label{tbl:paradigmohg}
 	\center
-	\caption {\tsc{int} vs. \tsc{ext} in Modern and Old High German and Gothic}
-	\begin{minipage}{\linewidth}
+	\caption {Old High German relative pronouns in headless relatives}
+	\begin{minipage}{0.85\linewidth}
 		\begin{tabularx}{\textwidth}{c *{6}{Y}}
 		\toprule
-		\tsc{sg}	& \tsc{m}     & \tsc{n}     &\tsc{f}           \\
+		\tsc{sg}	& \tsc{f}          & \tsc{m}           & \tsc{n}    \\
 		\midrule
-		\tsc{nom} & dër       	& daȥ					& diu              \\
-		\tsc{acc}	& dën					&	daȥ		      & dea, dia (die)	 \\
-		\tsc{dat}	&	dëmu, dëmo	&	dëmu, dëmo	& dëru, dëro			 \\
-    \tsc{gen} & dës         & dës         & dëra, dëru, dëro \\
+		\tsc{nom} & d-iu             & d-ër       	     & d-aȥ				\\
+		\tsc{acc}	& d-ea/-ia/(-ie)   & d-ën				       & d-aȥ		    \\
+		\tsc{dat}	& d-ëru/-ëro	     & d-ëmu/-ëmo	       & d-ëmu/-ëmo \\
+    \tsc{gen} & d-ëra/-ëru/-ëro  & d-ës              & d-ës       \\
 		\bottomrule
     \toprule
-    \tsc{pl}	& \tsc{m}            & \tsc{n}      & \tsc{f}   \\
+    \tsc{pl}	& \tsc{f}          & \tsc{m}           & \tsc{n}    \\
     \midrule
-    \tsc{nom} &  dē, dea, dia, die & diu, dei     & deo, dio  \\
-    \tsc{acc} &  dē, dea, dia, die & diu, dei     & deo, dio  \\
-    \tsc{dat} &  dēm, dēn          & dēm, dēn     & dēm, dēn  \\
-    \tsc{gen} &  dëro              & dëro         & dëro      \\
+    \tsc{nom} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
+    \tsc{acc} & d-eo/-io         &  d-ē/-ea/-ia/-ie  & d-iu/-ei   \\
+    \tsc{dat} & d-ēm/-ēn         &  d-ēm/-ēn         & d-ēm/-ēn   \\
+    \tsc{gen} & d-ëro            &  d-ëro            & d-ëro      \\
     \bottomrule
 		\end{tabularx}
 	\end{minipage}
 \end{table}
 
 
+\subsection{Gothic}
 
+\begin{table}[h]\label{tbl:paradigmgothic}
+	\center
+	\caption {Gothic relative pronouns in headless relatives}
+	\begin{minipage}{0.7\linewidth}
+		\begin{tabularx}{\textwidth}{c *{4}{Y}}
+		\toprule
+		\tsc{sg}	& \tsc{f}   & \tsc{m}   & \tsc{n}  \\
+		\midrule
+    \tsc{nom} & s-ō-ei 	  & s-a-ei 		& þ-at-ei	 \\
+    \tsc{acc} & þ-ō-ei    & þ-an-ei  	& þ-at-ei  \\
+    \tsc{dat} & þ-izái-ei & þ-amm-ei	& þ-amm-ei \\
+    \tsc{gen} & þ-izōz-ei & þ-iz-ei		& þ-iz-ei  \\
+		\bottomrule
+    \toprule
+    \tsc{pl}	& \tsc{f} 	& \tsc{m}		& \tsc{n}		\\
+    \midrule
+    \tsc{nom} &	þ-ōz-ei		&	þ-ái-ei		& þ-ō-ei   	\\
+    \tsc{acc} &	þ-ōz-ei		&	þ-anz-ei	& þ-ō-ei   	\\
+    \tsc{dat} &	þ-áim-ei	&	þ-áim-ei 	& þ-áim-ei	\\
+    \tsc{gen} &	þ-izō-ei	&	þ-izē-ei	& þ-izē-ei 	\\
+    \bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
+
+
+\subsection{Modern German}
+
+\begin{table}[h]\label{tbl:paradigmg}
+	\center
+	\caption {Modern German relative pronouns in headless relatives}
+	\begin{minipage}{0.4\linewidth}
+		\begin{tabularx}{\textwidth}{c *{3}{Y}}
+		\toprule
+		\tsc{sg}	& \tsc{f/m} & \tsc{n}  \\
+		\midrule
+    \tsc{nom}  & w-er   	& w-as     \\
+    \tsc{acc}  & w-en   	& w-as     \\
+    \tsc{dat}  & w-em   	&  		     \\
+    \tsc{gen}  & w-essen	& 		     \\
+		\bottomrule
+		\end{tabularx}
+	\end{minipage}
+\end{table}
 
   \section{Analysis}
 
@@ -178,11 +395,13 @@ In Old High German, proper attraction in headless relatives can be derived from 
     \subsection{Modern German}
 In German, inverse attraction in headed relatives can be shown to be very different from inverse attraction in headless relatives. I am not set on an analysis yet. Under a double-headed Cinque-analysis, it is the external DP that is deleted. Grafting is also still an option.
 
+
     \subsection{Gothic}
 In Gothic, ?
 
 
-\section{No attraction}
+
+\section{No attraction allowed}
 Italian has none. Italian uses its free relative pronoun also in light-headed relative pronouns.
 
 
